@@ -334,7 +334,7 @@ endmacro ()
 
 # List all the individual testsuite tests here, except those that need
 # special installed tests.
-TESTSUITE ( aastep arithmetic array array-derivs array-range
+TESTSUITE ( and-or-not-synonyms aastep arithmetic array array-derivs array-range
             blackbody blendmath breakcont
             bug-array-heapoffsets
             bug-locallifetime bug-outputinit bug-param-duplicate bug-peep
