@@ -327,8 +327,8 @@ Additionally, many others have contributed fixes and other small
 changes: Shane Ambler, Martijn Berger, Matthaus G. Chajdas, Thomas
 Dinges, Syoyo Fujita, Derek Haase, Sven-Hendrik Haase, Ronan Keryell,
 Bastien Montagne, Erich Ocean, Mikko Ohtamaa, Alex Schworer, Sergey
-Sharybin, Alexander von Knorring. (Listed alphabetically; if we've left
-anybody out, please let us know.)
+Sharybin, Stephan Steinbach, Alexander von Knorring. (Listed
+alphabetically; if we've left anybody out, please let us know.)
 
 We cannot possibly express sufficient gratitude to the managers at Sony
 Pictures Imageworks who allowed this project to proceed, supported it
