@@ -1,0 +1,4 @@
+#!/usr/bin/python 
+
+command += oslinfo("-v test")
+command += testshade("test")
