@@ -15,6 +15,9 @@ Language, standard libary, and compiler changes (for shader writers):
   you don't need to weight it by PI. #427 (1.6.2)
 * The "comma operator" now works in the way you would expect in other
   C-like languages. #451 (1.6.2)
+* The "and", "or", and "not" keywords are synonyms for the &&, ||, and !
+  operators, respectively. (If this seems strange, note that this is
+  true of C++ as well.) (1.6.2)
 
 API changes, new options, new ShadingSystem features (for renderer writers):
 * New ShadingSystem attribute int "profile", if set to 1, will include
